--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
     "plugins": [
         "prettier-plugin-tailwindcss"
-    ]
+    ],
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 200
 }
